--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       content="Giữ nhịp tài chính ổn định với 5 vùng chi tiêu đơn giản, Weekly/Monthly pulse và chế độ dùng chung an toàn cho cảm xúc."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com" />
-    <meta property="og:image" content="https://your-domain.com/spend-vibe.png" />
+    <meta property="og:url" content="https://https://spend-vibe.vercel.app" />
+    <meta property="og:image" content="https://https://spend-vibe.vercel.app/spend-vibe.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Quản lý chi tiêu không stress • Spend Vibe" />
     <meta
